fix(rider): stabilize simulator hot reload